<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:orientation="horizontal"
    tools:context=".Activity.UserProfileActivity"
    tools:showIn="@layout/activity_user_profile">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.robosoft.archana.instagramapplication.Util.MakeImageRound
            android:id="@+id/profilepic"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/download" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            android:textSize="@dimen/textsize"
            android:textColor="@android:color/background_dark"
            android:layout_marginTop="@dimen/topmargin"
            android:text="@string/username"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginLeft="@dimen/leftmargin"
            >
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/noofpost"
                android:id="@+id/posttext"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/textsize"
                android:textStyle="bold" />
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/followerstext"
                android:text="@string/nooffollowers"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/textsize"
                android:textStyle="bold" />
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:id="@+id/followingtext"
                android:layout_height="wrap_content"
                android:text="@string/nooffollowing"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/textsize"
                android:textStyle="bold"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginLeft="@dimen/leftmargin"
            >
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/post"
                android:id="@+id/post"
                android:textSize="@dimen/textsize"
                android:textStyle="bold" />
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/followers"
                android:text="@string/followers"
                android:textSize="@dimen/textsize"
                android:textStyle="bold" />
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:id="@+id/following"
                android:layout_height="wrap_content"
                android:text="@string/following"
                android:textSize="@dimen/textsize"
                android:textStyle="bold"
                />
    </LinearLayout>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/editbtn"
         android:layout_marginLeft="@dimen/leftmargin"
         android:text="@string/btntext"/>
    </LinearLayout>
</LinearLayout>
